--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: hack, FontAwesome 10
+font pango:monaco 9.5 
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -36,7 +36,8 @@ bindsym $mod+Return exec urxvt
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+#bindsym $mod+d exec dmenu_run -fn 'xos4 Terminus-13.8' -nb '#030203' -nf '#FFFFFF' -sb '#787878'
+bindsym $mod+d exec  rofi -show drun
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -92,17 +93,15 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-
-set $workspace1 "1:"
-set $workspace2 "2:"
-set $workspace3 "3:"
-set $workspace4 "4:"
-set $workspace5 "5:"
-set $workspace6 "6:"
-
-
-
-
+set $workspace1 "1:home"
+set $workspace2 "2:term"
+set $workspace3 "3:web"
+set $workspace4 "4:irc"
+set $workspace5 "5:torrent"
+set $workspace6 "6:vid"
+set $workspace7 "7:music"
+set $workspace8 "8:games"
+set $workspace9 "9:code"
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
 bindsym $mod+2 workspace $workspace2
@@ -110,9 +109,9 @@ bindsym $mod+3 workspace $workspace3
 bindsym $mod+4 workspace $workspace4
 bindsym $mod+5 workspace $workspace5
 bindsym $mod+6 workspace $workspace6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
+bindsym $mod+7 workspace $workspace7
+bindsym $mod+8 workspace $workspace8
+bindsym $mod+9 workspace $workspace9
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
@@ -122,16 +121,21 @@ bindsym $mod+Shift+3 move container to workspace $workspace3
 bindsym $mod+Shift+4 move container to workspace $workspace4
 bindsym $mod+Shift+5 move container to workspace $workspace5
 bindsym $mod+Shift+6 move container to workspace $workspace6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+7 move container to workspace $workspace7
+bindsym $mod+Shift+8 move container to workspace $workspace8
+bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace 10
 
+#music controls
+bindsym XF86AudioNext exec --no-startup-id mpc next
+bindsym XF86AudioPrev exec --no-startup-id mpc prev
+bindsym XF86AudioPlay exec --no-startup-id mpc toggle
 
+#Screenshot
+bindsym $mod+Shift+s exec --no-startup-id scrot
+
+#Assign Workspaces
 assign [class="Firefox"] $workspace3
-
-
-
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -162,91 +166,99 @@ mode "resize" {
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
-
-
 bindsym $mod+r mode "resize"
+
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+set $fg      #89A8C3
+set $bg      #2A2A2A
+set $bartextclr #00000
 bar {
-	tray_output primary 
+	strip_workspace_numbers yes
+	tray_output primary
         status_command i3blocks -c /home/eren/.config/i3/i3blocks.conf
 	colors {
-		background $bg-color
-	    	separator #757575
+		background $bg
+	    	separator $fg
 		#                  border             background         text
-		focused_workspace  $bg-color          $bg-color          $text-color
-		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+		focused_workspace  $bg             $fg           $bartextclr
+                active_workspace   $bg             $bg            $barfg
+		inactive_workspace $bg             $bg	        $barfg     
+		urgent_workspace   $urgent-bg-color   $urgent-bg-color  $bartextclr
 	}
-
 	position top
-
 }
-
     
-
-
 # ++++++++++ WINDOW COLORS++++++++++
-
-set $bg-color 	         #1C2023
-set $inactive-bg-color   #1C2023
-set $text-color          #f3f4f5
-set $inactive-text-color #676E7D
-set $urgent-bg-color     #E53935
-set $win-br 		 #e84f4f
- 
+#set $bg-color 	         #1C2023
+#set $inactive-bg-color   #1C2023
+#set $text-color          #f3f4f5
+#set $inactive-text-color #676E7D
+#set $urgent-bg-color     #E53935
+#set $win-br 		 #89A8C3
 
 # window colors
 #                       border              background         text                 indicator
-client.focused          $bg-color           $win-br          $text-color          #00ff00
-client.unfocused        $bg-color           $win-br          $inactive-text-color #00ff00
-client.focused_inactive $bg-color           $win-br          $inactive-text-color #00ff00
-client.urgent           $bg-color         $urgent-bg-color   $text-color          #00ff00
+#client.focused          $win-br           $win-br         $text-color          #00ff00
+#client.unfocused        $win-br           $win-br         $inactive-text-color #00ff00
+#CLIENT.Focused_inactive $win-br           $win-br          $inactive-text-color #00ff00
+#client.urgent           $win-br         $urgent-bg-color   $text-color          #00ff00
+
+
+# Set colors from Xresources
+# Change 'color7' and 'color2' to whatever colors you want i3 to use
+# from the generated scheme.
+# NOTE: The '#f0f0f0' in the lines below is the color i3 will use if
+# it fails to get colors from Xresources for some reason.
+#set_from_resource $fg i3wm.color7 #f0f0f0
+#set_from_resource $bg i3wm.color2 #f0f0f0
+
+# class                 border  backgr. text indicator child_border
+client.focused          $bg     $bg     $fg  $bg       $bg   
+client.focused_inactive $bg     $bg     $fg  $bg       $bg
+client.unfocused        $bg     $bg     $fg  $bg       $bg
+client.urgent           $bg     $bg     $fg  $bg       $bg
+client.placeholder      $bg     $bg     $fg  $bg       $bg
+
+client.background       $bg
+
 
 
 
 
 
 # i3-gaps related settings
-
-for_window [class="^.*"] border pixel 1
-
-
-gaps inner 0
-gaps outer 0
-smart_gaps on
-#smart_borders on|no_gaps
+for_window [class="^.*"] border pixel 3
+for_window [class="Firefox"] border pixel 0
 
 #key-bindings
-
-bindsym $mod+shift+x exec i3lock
+bindsym $mod+shift+x exec --no-startup-id i3lock --blur=300 --indicator --clock --insidecolor=2e3234ff
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id /usr/bin/pulseaudio-ctl up  #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id /usr/bin/pulseaudio-ctl down -5% #decrease sound volume
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%  #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 10 # decrease screen brightness
+bindsym $mod+F6 exec xbacklight -inc 20 # increase screen brightness
+bindsym $mod+F5 exec xbacklight -dec 20 # decrease screen brightness
 
 
 #WALLPAPER 
-exec_always feh --bg-scale /home/eren/.wallpaper/wall.jpg 
+exec_always feh --bg-scale /home/eren/.wallpaper/wall.jpg --bg-fill /home/eren/.wallpaper/wall.jpg 
 
 #LAPTOP SCREEN SETUP
-#exec_always xrandr --output HDMI1 --off --output DP-1 --off --output eDP-1 --primary --mode 1366x768 --pos 0x0 --rotate normal
-
-#DUAL-SCREEN SETUP
-exec_always xrandr --output HDMI1 --primary --mode 1920x1080 --pos 1366x0 --rotate normal --output DP1 --off --output eDP1 --mode 1366x768 --pos 0x152 --rotate normal --output VIRTUAL1 --off
-
+#exec_always xrandr --output HDMI1 --off --output DP1 --off --output eDP1 --primary --mode 1366x768 --pos 0x0 --rotate normal --output VIRTUAL1 --off
+#TRIPLE-SCREEN SETUP
+exec_always xrandr --output HDMI1 --primary --mode 1920x1080 --pos 1366x0 --rotate normal --output DP1 --mode 1280x1024 --pos 3286x56 --rotate normal --output eDP1 --mode 1366x768 --pos 0x152 --rotate normal --output VIRTUAL1 --off 
 #ONLY MONITOR SETUP
 #exec_always xrandr --output HDMI1 --primary --mode 1920x1080 --pos 0x0 --rotate normal --output DP1 --off --output eDP1 --off --output VIRTUAL1 --off
-
-
-
-
-exec_always --no-startup-id nm-applet
-exec_always --no-startup-id volumeicon
-exec_always --no-startup-id xfce4-power-manager 
+#DUAL MONITOR SETUP
+#exec_always xrandr --output HDMI-1 --mode 1920x1080 --pos 0x0 --rotate normal --output DP-1 --mode 1280x1024 --pos 1920x0 --rotate normal --output eDP-1 --off
+#COLORS
+#exec_always bash ~/.wallpapers/wp_init.sh
+exec_always compton -b --backend glx --vsync opengl-swc
+exec_always mpdscribble &
+#exec_always wal -i "$(< "${HOME}/.cache/wal/wal")"
+exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
