--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -25,20 +25,35 @@
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
 command=/usr/lib/i3blocks/$BLOCK_NAME
-separator_block_width=15
+separator_block_width=10
 markup=none
 
 # Volume indicator
 #
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
-# See the script for details
+# See the script for details.
+#[volume]
+#label=VOL
+#label=♪
+#instance=Master
+#instance=PCM
+#interval=once
+#signal=10
 
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
+#[memory]
+#label=MEM
+#separator=false
+#interval=30
 
-
+#[memory]
+#label=SWAP
+#instance=swap
+#separator=false
+#interval=30
 
 # Disk usage
 #
@@ -54,7 +69,7 @@ markup=none
 #
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
-[iface]
+#[iface]
 #instance=wlan0
 #color=#00FF00
 #interval=10
@@ -69,31 +84,50 @@ markup=none
 #instance=eth0
 #interval=5
 
+# CPU usage
+#
+# The script may be called with -w and -c switches to specify thresholds,
+# see the script for details.
+#[cpu_usage]
+#label=CPU
+#interval=10
+#min_width=CPU: 100.00%
+#separator=false
 
+#[load_average]
+#interval=10
+
+[music]
+command=mpc -h 127.0.0.1 current
+interval=10
+min_width=100
+separator=false
 
 # Battery indicator
 #
 # The battery instance defaults to 0.
+
 [battery]
-label=BAT
-label=⚡
+#label=BAT
+#label=⚡
+separator=false
 #instance=1
 interval=30
-
 # Date Time
 #
 [time]
-command=date '+%Y-%m-%d %H:%M:%S'
+command=date '+%H:%M'
 interval=5
+separator=false
 
 # Generic media player support
 #
 # This displays "ARTIST - SONG" if a music is playing.
 # Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
 #[mediaplayer]
-instance=cmus
-interval=5
-signal=10
+#instance=spotify
+#interval=5
+#signal=10
 
 # OpenVPN support
 #
@@ -125,3 +159,5 @@ signal=10
 #instance=NUM
 #interval=once
 #signal=11
+
+
